--- a/bluetooth-spp-terminal/build.gradle
+++ b/bluetooth-spp-terminal/build.gradle
@@ -1,21 +1,17 @@
 apply plugin: 'com.android.application'
-
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
-
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdkVersion 21
+        targetSdkVersion 27
 
         versionCode 2
         versionName "1.1"
     }
-
     lintOptions {
         checkReleaseBuilds false
     }
-
     buildTypes {
         release {
             minifyEnabled true
@@ -23,4 +19,9 @@ android {
             zipAlignEnabled true
         }
     }
+    productFlavors {
+    }
+}
+
+dependencies {
 }
