--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,19 @@
 
 buildscript {
     repositories {
+        google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha05'
     }
 }
 
 allprojects {
     repositories {
+        google()
         mavenCentral()
+        jcenter()
     }
 }
